# TrucoAgent

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Auxiliares/: CMakeLists.txt  cardUtils.cpp  cardUtils.hpp  deck.cpp  deck.hpp  handToEnvidoPointsConverter.cpp  handToEnvidoPointsConverter.hpp
Source/Envido_InfoStates_Generator/: CMakeLists.txt
Source/EventsInterpreter/: CMakeLists.txt  eventsInterpreter.cpp  eventsInterpreter.hpp
Source/MinimumHoleCardPredictor/: CMakeLists.txt  minimumHoleCardPredictor.cpp  minimumHoleCardPredictor.hpp  minimumHoleCardPredictorGenerator.cpp
Source/StateConverters/: CMakeLists.txt  envidoConverter_NIC_to_NAEI.cpp  envidoConverter_NIC_to_NAEI.hpp  envido_NIC_to_NAEI.hpp
Source/infoStatesGenerators/: envidoInfoStatesGeneratos.cpp
Source/sampleGenerators/: CMakeLists.txt  envidoSampleGenerator.cpp  trucoSampleGenerator.cpp
Tests/: CMakeLists.txt
Tests/AuxiliaresTests/: CMakeLists.txt  cardUtilsTest.cpp  deckTest.cpp  handToEnvidoPointsConverterTest.cpp
Tests/AuxiliaresTests/.cph/: .handToEnvidoPointsConverterTest.cpp_b53e3666ff2d674d1d800dfb7cdc66c0.prob
Tests/EventsInterpreterTest/: CMakeLists.txt
Tests/EventsInterpreterTests/: eventsInterpreterTest.cpp
Tests/MinimumHoleCardPredictorTests/: CMakeLists.txt  minimumHoleCardPredictorTest.cpp
Tests/StateConverters/: envidoConverter_NIC_to_NAEI_Test.cpp
Tests/StateConvertersTests/: CMakeLists.txt  envidoConverter_NIC_to_NAEI_Test.cpp
playing/: CMakeLists.txt  playAgent.cpp
solvers/: CMakeLists.txt  envidoSolver.cpp  trucoSolver.cpp
