cmake_minimum_required(VERSION 3.27)

project(converters_NIC_to_NAEI C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

#envidoConverter
add_library(envidoConverter_NIC_to_NAEI STATIC envidoConverter_NIC_to_NAEI.cpp envidoConverter_NIC_to_NAEI.hpp)

target_link_libraries(envidoConverter_NIC_to_NAEI PRIVATE eventsInterpreter)

#trucoConverter
add_library(trucoConverter_NIC_to_NAEI STATIC trucoConverter_NIC_to_NAEI.cpp trucoConverter_NIC_to_NAEI.hpp)

target_link_libraries(trucoConverter_NIC_to_NAEI PRIVATE eventsInterpreter)